reorganize the directory

--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,17 @@ textsum/log_root/*
 *.gz
 running_log.txt
 log_root*
-sogo_news_corpus/backup
-sogo_news_corpus/corpus
-sogo_news_corpus/jieba_dict
-sogo_news_corpus/opencc-python/
+preprocessing/backup
+preprocessing/corpus
+preprocessing/jieba_dict
+preprocessing/opencc-python/
+preprocessing/*vocab*
+preprocessing/nohup.out
+preprocessing/*temp*
+preprocessing/*test*
+
+
+
 temp*
 data/*
 toy_data/*
