--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ preprocessing/all_vocab
 preprocessing/nohup.out
 preprocessing/*temp*
 preprocessing/*test*
+google_search_crawler/googleresult.json
 
 
 
