--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ preprocessing/*temp*
 preprocessing/*test*
 google_search_crawler/googleresult.json
 google_search_crawler/result.json
+yahoo_knowledge_data/
 
 
 
