--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ preprocessing/*test*
 google_search_crawler/googleresult.json
 google_search_crawler/result.json
 yahoo_knowledge_data/
+yahoo_log_root_1/
 
 
 
