--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ google_search_crawler/googleresult.json
 google_search_crawler/result.json
 yahoo_knowledge_data/
 yahoo_log_root_1/
+yahoo_log_root_2/
 
 
 
